<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_edit_todo"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/todo_complete_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/todo_item_switch_text"
            android:textStyle="italic"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_title_header"
        android:layout_marginTop="16dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/edit_item_title_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_title_paceholder"
        android:background="@android:color/transparent"
        android:paddingBottom="16dp"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_description_header"
        android:layout_marginTop="16dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/edit_item_description_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_description_placeholder"
        android:background="@android:color/transparent"
        android:paddingBottom="16dp"
        android:scrollbars="vertical"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/edit_item_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_todo_save_botton_text"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/edit_item_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_todo_delete_button_text"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>