<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="16dp"
    android:id="@+id/create_todo_layout">

    <EditText
        android:id="@+id/add_item_title_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_title_paceholder" />

    <EditText
        android:id="@+id/add_item_description_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_description_placeholder"/>

    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

</LinearLayout>