<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.jimmykamau.todo.MainActivity"
    style="@style/BaseLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/new_item_input_container"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/completion_progress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    tools:text="33% Done"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toStartOf="@+id/completion_progress_text"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/progress_title"
                        android:layout_marginBottom="8dp"/>

                    <ProgressBar
                        android:id="@+id/completion_progress_bar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@android:style/Widget.ProgressBar.Horizontal" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_do_title"
                style="@style/SubtitleLayout"/>

            <ListView
                android:id="@+id/todo_items_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/new_item_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/NewItemInput">

        <Button
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add_button_text"
            android:onClick="addTodoItem" />

        <EditText
            android:id="@+id/add_item_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/add_item_button"
            android:hint="@string/new_item_paceholder" />

    </RelativeLayout>

</RelativeLayout>
